<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.music.MusicMainFragment">

    <data>

        <variable
            name="viewModel"
            type="com.retrytech.vilo.viewmodel.MusicViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/lout_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:contentDescription="@string/banner"
                    android:scaleType="centerCrop"
                    android:src="@drawable/banner_dummy"
                    android:visibility="gone" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:weightSum="2"

                >

                <TextView
                    android:id="@+id/tv_discover"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/discover"
                    android:textColor="@{viewModel.selectPosition == 0 ?@color/white : @color/color_text_light}" />

                <TextView
                    android:id="@+id/tv_favourite"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/favourite"
                    android:textColor="@{viewModel.selectPosition == 1 ?@color/white : @color/color_text_light}" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</layout>