<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.recordvideo.CameraActivity">

    <!-- code created by RetryTech / Skype : RetryTech / Mail = retrytech@gmail.com -->

    <data>

        <import type="android.view.View" />

        <variable
            name="onClickFlash"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.retrytech.vilo.viewmodel.CameraViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextureView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true" />


        <ImageView
            android:id="@+id/tv_select"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="@dimen/_62sdp"
            android:gravity="center"
            android:background="@drawable/bg_gradient_round"
            android:padding="10dp"
            android:src="@drawable/ic_gallary"
            android:tint="@color/white"
            android:visibility="@{viewModel.isRecording ? View.GONE :(viewModel.isStartRecording ? View.GONE : View.VISIBLE)}" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rtl1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@color/transparent"
            android:visibility="@{viewModel.isRecording ? View.GONE :(viewModel.isStartRecording ? View.GONE : View.VISIBLE)}">

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_corner_5"
                android:backgroundTint="@{viewModel.is15sSelect ? @color/white_55 : @color/black_55}"
                android:fontFamily="@font/popins_light"
                android:gravity="center"
                android:onClick="@{()->viewModel.onSelectSecond(true)}"
                android:padding="2dp"
                android:text="@string/_15s"
                android:textColor="@{viewModel.is15sSelect ? @color/black : @color/white}"
                android:textSize="13sp" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:background="@drawable/bg_white_corner_5"
                android:backgroundTint="@{viewModel.is15sSelect ? @color/black_55 : @color/white_55}"
                android:fontFamily="@font/popins_light"
                android:gravity="center"
                android:onClick="@{()->viewModel.onSelectSecond(false)}"
                android:padding="2dp"
                android:text="@string/_30s"
                android:textColor="@{viewModel.is15sSelect ? @color/white : @color/black}"
                android:textSize="13sp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rtl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/ic_record_start_">

            <ImageView
                android:id="@+id/btn_capture"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:contentDescription="@string/record"
                android:src="@{viewModel.isRecording ? @drawable/ic_record_start:@drawable/ic_record_stop_}"
                tools:src="@drawable/ic_record_stop_" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="50dp"
                android:src="@drawable/bg_white_corner_5"
                android:tint="@color/colorTheme"
                android:contentDescription="@string/image"
                tools:src="@drawable/bg_white_corner_5" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:elevation="2dp"
            app:cardCornerRadius="3dp">

            <com.retrytech.vilo.customview.progressbar.SegmentedProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/lnr1"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_below="@id/card"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/iv_flash"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"
                android:background="@drawable/bg_gradient_round"
                android:contentDescription="@string/close"
                android:padding="12dp"
                android:src="@drawable/ic_close"
                android:tint="@color/white"
                android:visibility="@{viewModel.isRecording ? View.INVISIBLE : View.VISIBLE}" />

            <TextView
                android:id="@+id/tv_sound_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_weight="1"
                android:fontFamily="@font/popins_medium"
                android:gravity="center"
                android:onClick="@{()->viewModel.setOnItemClick(1)}"
                android:paddingHorizontal="5dp"
                android:singleLine="true"
                android:textColor="@color/light_white"
                android:textSize="12sp"
                android:visibility="@{viewModel.soundTextVisibility}"
                tools:text="@tools:sample/full_names"
                tools:visibility="visible" />


        </LinearLayout>

        <ImageView
            android:id="@+id/iv_flash"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@+id/card"
            android:layout_alignParentEnd="true"
            android:layout_gravity="bottom"
            android:layout_margin="15dp"
            android:background="@drawable/bg_gradient_round"
            android:contentDescription="@string/flash"
            android:onClick="@{()->viewModel.onClickFlash()}"
            android:padding="8dp"
            android:src="@{viewModel.isFlashOn ? @drawable/ic_round_flash_off_24 : @drawable/ic_round_flash_on_24}"
            tools:src="@drawable/ic_round_flash_on_24" />

        <ImageView
            android:id="@+id/btn_flip"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/iv_flash"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/bg_gradient_round"
            android:contentDescription="@string/flip"
            android:padding="10dp"
            android:src="@drawable/ic_round_flip_camera_android_24"
            android:visibility="@{viewModel.isRecording ? View.GONE : View.VISIBLE}" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/btn_flip"
            android:layout_alignParentEnd="true"
            android:layout_margin="15dp"
            android:background="@drawable/bg_gradient_round"
            android:contentDescription="@string/music"
            android:gravity="center"
            android:onClick="@{()->viewModel.setOnItemClick(1)}"
            android:padding="12dp"
            android:src="@drawable/ic_music_videolist"
            android:tint="@color/white"
            android:visibility="@{viewModel.isRecording ? View.GONE : View.VISIBLE}" />

        <ImageView
            android:id="@+id/iv_select"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="@dimen/_62sdp"
            android:background="@drawable/bg_gradient_round"
            android:padding="8dp"
            android:src="@drawable/ic_round_check"
            android:visibility="@{viewModel.isRecording ? View.GONE : View.VISIBLE}" />

    </RelativeLayout>
</layout>