<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.gms.ads.formats.UnifiedNativeAdView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">


            <com.google.android.gms.ads.formats.MediaView
                android:id="@+id/ad_media"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingHorizontal="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linear_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">


                    <ImageView
                        android:id="@+id/ad_app_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="true"
                        android:background="@drawable/bg_gradient_round"
                        android:contentDescription="@string/image"
                        android:padding="2dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/ad_headline"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/popins_semi_bold"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:text="Jamson Bond" />


                            <TextView
                                android:id="@+id/ad_advertiser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/popins_reguler"
                                android:textColor="@color/white"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                android:visibility="gone"
                                tools:text="@string/image" />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/ad_store"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/popins_light"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            android:visibility="visible"
                            tools:text="@string/imagePickerEmpty" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_black_30"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <TextView
                        android:id="@+id/ad_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="120dp"
                        android:layout_marginBottom="5dp"
                        android:ellipsize="end"
                        android:fontFamily="@font/popins_light"
                        android:lines="3"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        tools:text="@tools:sample/lorem/random" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/ad_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_white_corner_2"
                            android:backgroundTint="@color/black"
                            android:paddingHorizontal="5dp"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            tools:text="$2000" />

                        <RatingBar
                            android:id="@+id/ad_stars"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:isIndicator="true"
                            android:numStars="5"
                            android:progressTint="@color/colorTheme"
                            android:stepSize="0.2" />
                    </LinearLayout>

                </LinearLayout>


                <Button
                    android:id="@+id/ad_call_to_action"
                    android:layout_width="250dp"
                    android:layout_height="37dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_gradient"
                    android:fontFamily="@font/popins_light"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:text="@string/back_online" />

            </LinearLayout>


            <!--<TextView style="@style/AppTheme.AdAttribution" />-->

            <TextView
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/bg_white_bottom_corner_2"
                android:backgroundTint="@color/colorTheme"
                android:fontFamily="@font/popins_reguler"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/ad"
                android:textColor="@color/white"
                android:textSize="9sp" />

        </RelativeLayout>
        <!--
            </androidx.cardview.widget.CardView>-->
    </com.google.android.gms.ads.formats.UnifiedNativeAdView>
</layout>
